src/sass/style.scss
$color--react: #61dafb;
@import "partials/_typography";
@import "partials/_forms";
@import "partials/_navigation";

body {
    background: black;
    height: 100vh;
    width: 100vw;
    color: white;
    font-family: "karla", sans-serif;
}
#bg {
    // Background
    background: green url("../assets/react-bg.jpg");
    filter: hue-rotate(300deg);
    pointer-events: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
}
#darken {
    // Dark overlay over background
    background: rgba(0, 0, 50, 0.1);
    pointer-events: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
}

/* Typography */
h1 {
    font-family: "Gelion", sans-serif;
}
p {
    max-width: 30rem;
    margin: auto;
    display: block;
    background: rgba(0, 0, 0, 0);
    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
    border: 0px;
    padding: 1rem;
    border-radius: 0.3rem;
    color: rgba(255, 255, 255, 0.8);
}
hr {
    border-color: rgba(0, 150, 150, 0.5);
}
.animated {
    margin: auto;
}
.link {
    color: rgba(255, 255, 255, 0.8);
    display: inline-block;
    padding: 0.5rem;
    border-radius: 0.3rem;
    border: 1px solid rgba(100, 100, 255, 0.3);
    &:hover {
        text-decoration: underline;
        color: rgba(255, 255, 255, 1);
    }
    &:before {
        content: "🔗 ";
    }
}
.list-group-item {
    background: rgba(0, 0, 0, 0);
    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
    border: 0px;
}

/* Content */
.container-content {
    padding: 5vmin;
}
.animated {
    transform-origin: bottom;
}

// .card {
//     height: 100px;
//     overflow: hidden;
//     &:hover {
//         height: auto;
//     }
// }

